feat: settings and better steering